# FDenoise

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/Original/: X_021_(1).flac  X_021_(10).flac  X_021_(11).flac  X_021_(12).flac  X_021_(13).flac  X_021_(14).flac  X_021_(15).flac  X_021_(16).flac  X_021_(17).flac  X_021_(18).flac  X_021_(19).flac  X_021_(2).flac  X_021_(20).flac  X_021_(3).flac  X_021_(4).flac  X_021_(5).flac  X_021_(6).flac  X_021_(7).flac  X_021_(8).flac  X_021_(9).flac
examples/Processed/: X_021_(1).flac  X_021_(10).flac  X_021_(11).flac  X_021_(12).flac  X_021_(13).flac  X_021_(14).flac  X_021_(15).flac  X_021_(16).flac  X_021_(17).flac  X_021_(18).flac  X_021_(19).flac  X_021_(2).flac  X_021_(20).flac  X_021_(3).flac  X_021_(4).flac  X_021_(5).flac  X_021_(6).flac  X_021_(7).flac  X_021_(8).flac  X_021_(9).flac
libs/fftw3/: libfftw3-3.exp  libfftw3-3.lib
